# KBR

./: CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  address.txt
Bitrecover/: CMakeLists.txt  LICENSE  Makefile  QUICKSTART.md
Bitrecover/include/bitrecover/: types.h
Bitrecover/scripts/: send_email.py  startup_notify.py
Bitrecover/src/: BitrecoverEngine.cpp  ConfigManager.cpp  EmailNotifier.h  MultiGPUManager.h  StatusDisplay.cpp  StatusDisplay.h  main.cpp
config/: config.json
include/bitrecover/: constants.h
notebooks/: bitrecover_colab.ipynb
src/: BitrecoverEngine.h  ConfigManager.h  EmailNotifier.cpp  MultiGPUManager.cpp  RandomKeyGenerator.cpp  RandomKeyGenerator.h
